--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <h1 class="frase">recurso online de acesso a saúde</h1>
         <nav class="nav">
           <img src="./assets/column3.svg" class="img-nav" alt="Nav" />
-          <a href="" class="sobre">Sobre</a>
+          <a href="./about.html" class="sobre">Sobre</a>
           <a href="" class="registre">Registre</a>
           <a href="" class="pontos">Pontos</a>
         </nav>
@@ -68,7 +68,7 @@
         />
         <img src="./assets/caminhao.svg" class="caminhao" alt="" />
         <img src="./assets/logo.svg" class="logo-teste" alt="" />
-        <a href="">
+        <a href="./quiz-psicology.html">
           <img src="./assets/button.svg" class="button-test" alt=""
         /></a>
       </section>
@@ -288,7 +288,7 @@
       <footer class="footer-mobile">
         <nav class="nav-mobile">
           <ul>
-            <li><a href="">Sobre</a></li>
+            <li><a href="./about.html">Sobre</a></li>
             <li><a href="">Registre</a></li>
             <li><a href="">Pontos</a></li>
           </ul>
@@ -302,17 +302,5 @@
         <p class="copyright interator">Copyright &copy; 2020 RODAS</p>
       </footer>
     </div>
-    <script
-      type="text/javascript"
-      src="//code.jquery.com/jquery-1.11.0.min.js"
-    ></script>
-    <script
-      type="text/javascript"
-      src="//code.jquery.com/jquery-migrate-1.2.1.min.js"
-    ></script>
-    <script src="https://code.jquery.com/jquery-1.11.0.min.js"></script>
-    <script src="https://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.7.1/slick.js"></script>
-    <script src="./js/index.js"></script>
   </body>
 </html>
