--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <![endif]-->
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Rodas:RECURSO ONLINE DE ACESSO A SAÚDE</title>
+    <title>Rodas:Recurso onlife de auxílio a saúde</title>
     <link rel="shortcut icon" href="./assets/logo.svg" type="image/x-icon" />
     <link
       rel="stylesheet"
@@ -43,7 +43,7 @@
       </div>
       <section class="header">
         <img src="./assets/logo.svg" class="logo" alt="Roda" />
-        <h1 class="frase">recurso online de acesso a saúde</h1>
+        <h1 class="frase">recurso onlife de auxílio a saúde</h1>
         <nav class="nav">
           <img src="./assets/column3.svg" class="img-nav" alt="Nav" />
           <a href="./about.html" class="sobre">Sobre</a>
