--- a/about.html
+++ b/about.html
@@ -28,24 +28,10 @@
         <img src="./assets/logo.svg" class="interator logo-about" alt="" />
         <h1>Sobre</h1>
         <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas est
-          nulla, imperdiet ut aliquet nec, ornare vel neque. Nulla in metus
-          urna. Vivamus mollis nibh eu mi hendrerit, sed sagittis lorem maximus.
-          Sed ex erat, rhoncus et gravida ut, semper at enim. Cras sed feugiat
-          elit. Nam fringilla vulputate lorem. Nullam at iaculis nisl. Duis
-          sollicitudin mauris congue, varius purus eu, egestas massa. Proin sed
-          facilisis lacus.
+          RODAS- nasce como recurso Onlife de auxílio a saúde. Com objetivo de priorizar a qualidade de vida e bem-estar de caminhoneiros e caminhoneiras, oferece ajuda em rede, prevenção e benefícios diversos para saúde deles e de seus familiares. Busca desconstruir estigmas das enfermidades acometidas na profissão, auxiliar na percepção de sinais de agravamento de má qualidade de vida e cria um diálogo em uma rede de ajuda. Agrega parcerias ao longo das estradas, pontos de apoio nas comunidades e nas cidades, além de suporte do programa Estrada na Saúde da CCR. Orientará o cliente com notificações, vídeos e post de prevenção e dicas para melhora da sua saúde mental, física e laboral (ergonomia). 
           <br />
-          <br />
-          Donec ut elit nisl. Fusce ex odio, elementum id erat at, placerat
-          gravida nunc. Etiam sem felis, pulvinar et sapien et, placerat mattis
-          augue. Donec consectetur odio id ipsum porta sodales. Aenean dignissim
-          justo dictum risus scelerisque, ut sagittis tortor maximus. Praesent
-          sit amet sollicitudin sapien. Vivamus vitae hendrerit neque, quis
-          malesuada lorem. Mauris tempor commodo vehicula. Donec hendrerit lacus
-          magna, sed tempus quam ullamcorper vitae. Donec faucibus arcu in dolor
-          rhoncus lacinia. Aenean euismod quis diam egestas finibus. Nulla
-          libero enim, scelerisque et mauris ut, accumsan ultricies est.
+          <br/>
+          Dinâmico e gamificado os clientes responderão perguntas para averiguar seu estado de saúde. Suas respostas indicarão sua percepção ao estado de saúde e atenção ao corpo. Um mapa o guiará e orientará a buscar entidades assistencialistas especializadas. Em uma experiência OnLife serão encaminhados para ajudas parceiras, em qualquer caso (leves ou agudos) que julguem necessários. Em interação com a plataforma, em suas diferentes abas, computará pontos, que poderão ser trocados por experiências, descontos e prêmios no programa RodasOnLife, com parceiros do programa RodasAmigos. Ao criar uma relação cotidiana com a plataforma, de forma saudável, agregará valores reais e contribuirá com reivindicações de melhora de serviços e condições de trabalho da classe. Conduzirá a melhoria no cotidiano de forma personalizada, gerando uma  atenção a sua qualidade e dessa forma auxilia a evitar acidentes e agravos.
         </p>
       </div>
       <h1 class="parcerias-title">Parcerias</h1>
