--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
       </div>
       <header class="header-mobile">
         <img src="./assets/logo.svg" class="logo-mobile" alt="RODAS" />
-        <h1 class="frase-mobile">recurso online de acesso a saúde</h1>
+        <h1 class="frase-mobile">recurso onlife de auxílio a saúde</h1>
         <nav class="nav-mobile">
           <ul>
             <li><a href="">Sobre</a></li>
