--- a/index.html
+++ b/index.html
@@ -141,9 +141,9 @@
       <footer class="footer">
         <img src="./assets/banner-footer.svg" class="banner-footer" alt="" />
         <img src="./assets/column32.svg" class="column3" alt="" />
-        <a href="" class="sobre-footer">Sobre</a>
-        <a href="" class="registre-footer">Registre</a>
-        <a href="" class="pontos-footer">Pontos</a>
+        <a href="./about.html" class="sobre-footer">SOBRE</a>
+        <a href="" class="registre-footer">REGISTRE</a>
+        <a href="" class="pontos-footer">PONTOS</a>
         <a href="" class="contato">
           <img src="./assets/contato.svg" class="interator" alt="" />
           <h3>
@@ -288,9 +288,9 @@
       <footer class="footer-mobile">
         <nav class="nav-mobile">
           <ul>
-            <li><a href="./about.html">Sobre</a></li>
-            <li><a href="">Registre</a></li>
-            <li><a href="">Pontos</a></li>
+            <li><a href="./about.html">SOBRE</a></li>
+            <li><a href="">REGISTRE</a></li>
+            <li><a href="">PONTOS</a></li>
           </ul>
         </nav>
         <a href="" class="contato-mobile">
