--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
         <nav class="nav">
           <img src="./assets/column3.svg" class="img-nav" alt="Nav" />
           <a href="./about.html" class="sobre">Sobre</a>
-          <a href="" class="registre">Registre</a>
-          <a href="" class="pontos">Pontos</a>
+          <a href="./registro.html" class="registre">Registre</a>
+          <a href="./pontos.html" class="pontos">Pontos</a>
         </nav>
         <p class="content-frase">
           prioriza a qualidade de vida de caminhoneiros e caminhoneiras oferece
@@ -142,8 +142,8 @@
         <img src="./assets/banner-footer.svg" class="banner-footer" alt="" />
         <img src="./assets/column32.svg" class="column3" alt="" />
         <a href="./about.html" class="sobre-footer">SOBRE</a>
-        <a href="" class="registre-footer">REGISTRE</a>
-        <a href="" class="pontos-footer">PONTOS</a>
+        <a href="./registro.html" class="registre-footer">REGISTRE</a>
+        <a href="./pontos.html" class="pontos-footer">PONTOS</a>
         <a href="" class="contato">
           <img src="./assets/contato.svg" class="interator" alt="" />
           <h3>
@@ -289,8 +289,8 @@
         <nav class="nav-mobile">
           <ul>
             <li><a href="./about.html">SOBRE</a></li>
-            <li><a href="">REGISTRE</a></li>
-            <li><a href="">PONTOS</a></li>
+            <li><a href="./registro.html">REGISTRE</a></li>
+            <li><a href="./pontos.html">PONTOS</a></li>
           </ul>
         </nav>
         <a href="" class="contato-mobile">
