--- a/about.html
+++ b/about.html
@@ -20,32 +20,21 @@
     <link rel="stylesheet" href="./css/normalize.css" />
     <link rel="stylesheet" href="./css/index.css" />
     <link rel="stylesheet" href="./css/product-links.css" />
+    <link rel="stylesheet" href="./css/registre.css">
   </head>
 
   <body>
     <div class="container-about">
       <div class="about-content">
         <img src="./assets/logo.svg" class="interator logo-about" alt="" />
-        <h1>Sobre</h1>
-        <p>
-          RODAS- nasce como recurso Onlife de auxílio a saúde. Com objetivo de priorizar a qualidade de vida e bem-estar de caminhoneiros e caminhoneiras, oferece ajuda em rede, prevenção e benefícios diversos para saúde deles e de seus familiares. Busca desconstruir estigmas das enfermidades acometidas na profissão, auxiliar na percepção de sinais de agravamento de má qualidade de vida e cria um diálogo em uma rede de ajuda. Agrega parcerias ao longo das estradas, pontos de apoio nas comunidades e nas cidades, além de suporte do programa Estrada na Saúde da CCR. Orientará o cliente com notificações, vídeos e post de prevenção e dicas para melhora da sua saúde mental, física e laboral (ergonomia). 
-          <br />
-          <br/>
-          Dinâmico e gamificado os clientes responderão perguntas para averiguar seu estado de saúde. Suas respostas indicarão sua percepção ao estado de saúde e atenção ao corpo. Um mapa o guiará e orientará a buscar entidades assistencialistas especializadas. Em uma experiência OnLife serão encaminhados para ajudas parceiras, em qualquer caso (leves ou agudos) que julguem necessários. Em interação com a plataforma, em suas diferentes abas, computará pontos, que poderão ser trocados por experiências, descontos e prêmios no programa RodasOnLife, com parceiros do programa RodasAmigos. Ao criar uma relação cotidiana com a plataforma, de forma saudável, agregará valores reais e contribuirá com reivindicações de melhora de serviços e condições de trabalho da classe. Conduzirá a melhoria no cotidiano de forma personalizada, gerando uma  atenção a sua qualidade e dessa forma auxilia a evitar acidentes e agravos.
-        </p>
+        
       </div>
-      <h1 class="parcerias-title">Parcerias</h1>
-      <div class="parcerias-content">
-       <a href=""> <img src="./assets/logo.svg" class="interator" alt="" /></a>
-       <a href=""> <img src="./assets/logo.svg" class="interator" alt="" /></a>
-       <a href=""> <img src="./assets/logo.svg" class="interator" alt="" /></a>
-       <a href=""> <img src="./assets/logo.svg" class="interator" alt="" /></a>
-       <a href=""> <img src="./assets/logo.svg" class="interator" alt="" /></a>
-       <a href=""> <img src="./assets/logo.svg" class="interator" alt="" /></a>
-       <a href=""> <img src="./assets/logo.svg" class="interator" alt="" /></a>
-       <a href=""> <img src="./assets/logo.svg" class="interator" alt="" /></a>
-       <a href=""> <img src="./assets/logo.svg" class="interator" alt="" /></a>
-      </div>
+      <div class="content-registre">
+        <img src="./assets/sobre/0001.jpg" alt="">
+        <img src="./assets/sobre/0002.jpg" alt="">
+        <img src="./assets/sobre/0003.jpg" alt="">
+        <img src="./assets/sobre/0004.jpg" alt="">
+    </div>
       <footer class="footer-about">
         <a href="./index.html">Voltar a tela inicial</a>
         <p class="copyright interator">Copyright &copy; 2020 RODAS</p>
