--- a/pontos.html
+++ b/pontos.html
@@ -16,6 +16,7 @@
     <link rel="stylesheet" href="./css/index.css" />
     <link rel="stylesheet" href="./css/product-links.css" />
     <link rel="stylesheet" href="./css/quiz-psicology.css">
+    <link rel="stylesheet" href="./css/registre.css">
 </head>
 
 <body>
@@ -24,7 +25,11 @@
             <h1> Pontos </h1>
             <p>Em breve aqui tera a relacao de pontos que um caminhoneiro possui</p>
         </header>
-        
+        <div class="content-registre">
+            <img src="./assets/ponto1.jpg" alt="">
+            <img src="./assets/ponto2.jpg" alt="">
+            <img src="./assets/ponto3.jpg" alt="">
+        </div>
         <footer class="footer-quiz">
             <a href="./index.html" class="interator">Voltar a tela inicial</a>
             <a class="interator" href="./index.html">Copyright &copy; 2020 RODAS</a>
