--- a/registro.html
+++ b/registro.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="./css/normalize.css" />
     <link rel="stylesheet" href="./css/index.css" />
     <link rel="stylesheet" href="./css/product-links.css" />
+    <link rel="stylesheet" href="./css/registre.css">
     <link rel="stylesheet" href="./css/quiz-psicology.css">
 </head>
 
@@ -22,9 +23,12 @@
     <div id="container">
         <header>
             <h1> Registro </h1>
-            <p>Em breve aqui tera um formulario para que os caminhoneiros possam se registrar, e tambem tera a opçao de eles se cadastrarem utilizando informações de cadstro da CCR</p>
+            <p>Em breve aqui tera um formulario para que os caminhoneiros possam se registrar, e tambem tera a opçao de
+                eles se cadastrarem utilizando informações de cadstro da CCR</p>
         </header>
-        
+        <div class="content-registre">
+            <img src="./assets/registre.jpg" alt="">
+        </div>
         <footer class="footer-quiz">
             <a href="./index.html" class="interator">Voltar a tela inicial</a>
             <a class="interator" href="./index.html">Copyright &copy; 2020 RODAS</a>
